{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 12,
  "lineage": "651dc73f-9724-6521-4e9c-a7f4180e094c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkinsec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-062a49a8152e4c031",
            "arn": "arn:aws:ec2:eu-west-1:992382515139:instance/i-02250e2c3dfb694fe",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02250e2c3dfb694fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prismikaec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a8f57d1a8c4ca1ad",
            "private_dns": "ip-10-0-1-215.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-54-216-55-157.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.55.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-086b3dfcc8a763741",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0c78349ad94cd84e4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0878e3a3c70e53d48",
            "tags": {
              "Name": "jenkinsec2"
            },
            "tags_all": {
              "Name": "jenkinsec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c78349ad94cd84e4"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "aws_subnet.public-jenkins-subnet",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382515139:internet-gateway/igw-0284c419ff95e0c02",
            "id": "igw-0284c419ff95e0c02",
            "owner_id": "992382515139",
            "tags": {
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-0ab1786b2f0b3fdb2"
          },
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-jenkins-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382515139:route-table/rtb-0a792ba04e54c743c",
            "id": "rtb-0a792ba04e54c743c",
            "owner_id": "992382515139",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0284c419ff95e0c02",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-jenkins-rt"
            },
            "tags_all": {
              "Name": "public-jenkins-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab1786b2f0b3fdb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jenkins-igw",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0801b4b9bd9afabb8",
            "route_table_id": "rtb-0a792ba04e54c743c",
            "subnet_id": "subnet-0878e3a3c70e53d48"
          },
          "dependencies": [
            "aws_internet_gateway.jenkins-igw",
            "aws_route_table.public-jenkins-rt",
            "aws_subnet.public-jenkins-subnet",
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382515139:security-group/sg-0c78349ad94cd84e4",
            "description": "Allows port SSH, HTTP, and Jenkins traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c78349ad94cd84e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240530184234942700000001",
            "name_prefix": "terraform-",
            "owner_id": "992382515139",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-sg"
            },
            "tags_all": {
              "Name": "Jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab1786b2f0b3fdb2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382515139:subnet/subnet-0878e3a3c70e53d48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0878e3a3c70e53d48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382515139",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-jenkins-subnet"
            },
            "tags_all": {
              "Name": "public-jenkins-subnet"
            },
            "vpc_id": "vpc-0ab1786b2f0b3fdb2"
          },
          "dependencies": [
            "aws_vpc.jenkins-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382515139:vpc/vpc-0ab1786b2f0b3fdb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008ad64d0d3639c4d",
            "default_route_table_id": "rtb-09ffe0f1a6b9087bc",
            "default_security_group_id": "sg-0bfade2826454e72d",
            "dhcp_options_id": "dopt-052e9c6a0a11656eb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab1786b2f0b3fdb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ffe0f1a6b9087bc",
            "owner_id": "992382515139",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}